--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test-storybook": "test-storybook",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@cdssnc/gcds-components": "^0.32.0",
@@ -28,6 +31,9 @@
     "@storybook/react": "^8.6.2",
     "@storybook/react-vite": "^8.6.2",
     "@storybook/test": "^8.6.2",
+    "@storybook/test-runner": "^0.22.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
@@ -36,10 +42,12 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-storybook": "^0.11.3",
     "globals": "^15.15.0",
+    "jsdom": "^26.0.0",
     "storybook": "^8.6.2",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vitest": "^3.0.7"
   },
   "eslintConfig": {
     "extends": [
